added the first blog

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Simple Website</title>
+    <link rel="stylesheet" href="style/blog.css">
 </head>
 <body>
-    
+    <div>
+        <h3>MY Website for N words</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni unde corporis enim quod! Dolorem ut corporis velit quaerat pariatur provident enim, tenetur voluptatibus magnam ducimus cumque sunt possimus accusantium architecto.</p>
+    </div>
 </body>
 </html>
