added the second and third blog

--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
     <div>
-        <h3>MY Website for N words</h3>
+        <h3>MY first blog for N words</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni unde corporis enim quod! Dolorem ut corporis velit quaerat pariatur provident enim, tenetur voluptatibus magnam ducimus cumque sunt possimus accusantium architecto.</p>
+    </div>
+    <div>
+        <h3>MY second blog for N words</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni unde corporis enim quod! Dolorem ut corporis velit quaerat pariatur provident enim, tenetur voluptatibus magnam ducimus cumque sunt possimus accusantium architecto.</p>
+    </div>
+    <div>
+        <h3>MY third blog for N words</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni unde corporis enim quod! Dolorem ut corporis velit quaerat pariatur provident enim, tenetur voluptatibus magnam ducimus cumque sunt possimus accusantium architecto.</p>
     </div>
 </body>
