added a list to push code

--- a/index.html
+++ b/index.html
@@ -19,5 +19,13 @@
         <h3>MY third blog for N words</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni unde corporis enim quod! Dolorem ut corporis velit quaerat pariatur provident enim, tenetur voluptatibus magnam ducimus cumque sunt possimus accusantium architecto.</p>
     </div>
+    <div>
+        <h3>You push incremental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add a meaningful commit message"</li>
+            <li>git push</li>
+        </ul>
+    </div>
 </body>
 </html>
